--- a/style.css
+++ b/style.css
@@ -7,14 +7,12 @@
 body{
     background-image: url("https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/superover-bg.png");
     background-size: cover;
-    display: flex;
-    justify-content: center;
     color: white;
     font-family: 'Poppins',sans-serif;
     
 }
 .main{
-    height: 700px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -25,10 +23,11 @@ body{
     height: auto;
 }
 main{
-    width: 800px;
+    width: auto;
     display: flex;
-    justify-content: space-between;
-
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    /* padding: 0px 100px; */
 }
 
 #ind-score{
@@ -41,7 +40,7 @@ main{
     align-items: center;
     justify-content: space-around;
     padding-top: 20px;
-    
+    margin: 40px 45px;
 }
 #pak-score{
     width: 350px;
@@ -53,6 +52,7 @@ main{
     align-items: center;
     justify-content: space-around;
     padding-top: 20px;
+    margin: 40px 45px;
 }
 .ball{
     display: flex;
